--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "msp/recaptcha": "*",
         "msp/twofactorauth": "*",
         "msp/userlockout": "*",
+        "msp/passwordstrength": "*",
         "magento/magento-composer-installer": "*"
     },
     "suggest": {
 
     },
     "type": "magento2-module",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "license": "OSL 3.0",
     "autoload": {
         "files": [
